Cleaning up solution from Sonnet AI